# dandelionFunctionExamples

./: .gitignore  .gitmodules  README.md  remake-wasm.sh
.github/workflows/: cmake-multi-platform.yml  file_checks.yml
c_functions/: CMakeLists.txt  README.md  cfg++_template.txt
c_functions/busy/: CMakeLists.txt
c_functions/busy_hybrid/: busy_hybrid.c
c_functions/busy_hybrid/linux_syscalls/: syscall.h
c_functions/busy_libc/: busy_libc.c
c_functions/compression/: CMakeLists.txt  compression.c
c_functions/dirigent_busy/: CMakeLists.txt  dirigent_busy.c
c_functions/example_app/: fan_out.c  handle.c  template.c
c_functions/example_app_hybrid/: app_hybrid.c
c_functions/files/: CMakeLists.txt  fileio.c
c_functions/matmac/: CMakeLists.txt
c_functions/stdio/: CMakeLists.txt  stdio.c
c_functions/stdio_cxx/: CMakeLists.txt  stdio.cpp
functions/: CMakeLists.txt  README.md  cfg_template.txt  cross_template.txt  dandelion.cmake
functions/basic/: CMakeLists.txt  basic.c  basic.h
functions/busy/: busy.c
functions/busy_hybrid/: CMakeLists.txt  busy_hybrid.c
functions/busy_hybrid/linux_syscalls/arch/x86_64/: syscall_arch.h
functions/busy_libc/: CMakeLists.txt  busy_libc.c
functions/compression/: compression.c  stb_image_write.h
functions/dirigent_busy/: CMakeLists.txt  dirigent_busy.c
functions/example_app/: CMakeLists.txt  fan_out.c  handle.c  template.c
functions/example_app_hybrid/: CMakeLists.txt  app_hybrid.c
functions/example_app_hybrid/linux_syscalls/: CMakeLists.txt  syscall.h
functions/example_app_hybrid/linux_syscalls/arch/aarch64/: syscall_arch.h
functions/example_app_hybrid/linux_syscalls/arch/x86_64/: syscall_arch.h
functions/example_app_nolibc/: CMakeLists.txt  commons.h  fan_out.c  handle.c  template.c
functions/files/: CMakeLists.txt  fileio.c
functions/matmac/: CMakeLists.txt  matmac.c
functions/matmul/: CMakeLists.txt  matmul.c
functions/stdio/: CMakeLists.txt  stdio.c
functions/stdio_cxx/: CMakeLists.txt
functions/tokenizer/: CMakeLists.txt  embedded_tokenizer_data.h  test.c  tokenizer.cpp
functions/wrapper/: CMakeLists.txt  wrapperMain.c
js_functions/: busy.js  matmul.js  middleware_app.js
rust_functions/: Cargo.toml
rust_functions/src/: aes_func.rs  float_operation.rs  linpack.rs  main.rs  matmul.rs
wasm-compiler/: README.md  compile-function.sh  compile-functions.sh  compile-matmul.sh  make-wasm-binaries.sh  remake-wasm.sh
wasm-compiler/binaries/: basic  basic-aarch64  matmac  matmac-aarch64  matmul  matmul-aarch64
wasm-compiler/binaries/wasm/: basic.wasm  basic.wat  busy.wasm  busy.wat  matmac.wasm  matmac.wat  matmul.wasm  matmul.wat  wasm_test.wasm  wasm_test.wat
wasm-compiler/dandelion-wasm-compiler/: Cargo.toml
wasm-compiler/dyn-load-test/: Cargo.toml
wasm-compiler/dyn-load-test/guest/: Cargo.toml
wasm-compiler/dyn-load-test/guest/src/: lib.rs
wasm-compiler/dyn-load-test/src/: elf_parser.rs  main.rs
wasm-compiler/sandboxed-function/: Cargo.toml
wasm-compiler/sandboxed-function/macro-utils/: Cargo.toml
wasm-compiler/sandboxed-function/macro-utils/src/: lib.rs
wasm-compiler/sandboxed-function/src/: interface.rs  lib.rs
wasm-compiler/wasmtime-precompile/: Cargo.toml
wasm-compiler/wasmtime-precompile/src/: main.rs
