[package]
name = "rust_fass_functions"
version = "0.1.0"
authors = ["mgiardino"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

ndarray = { version = "0.15.0", features = ["blas"] }
blas-src = { version = "0.8", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }

ndarray-linalg = "0.16.0"
ndarray-rand = { version = "0.14.0" }
aes = "0.8.2"
generic-array = "0.14.6"
